# hierarchical_yolo

./: .gitignore  data  mkdocs.yml  pyproject.toml  requirements.txt  requirements_gtx1080.txt
docs/: README.md
hierarchical_yolo/: .hierarchical_detection.py.swp  apples2apples_benchmarks.py  calibration_benchmarks.py  coco_data_orchestrator.py  coco_training.py  coco_utils.py  data_orchestrator.py  deep7_model.py  fathomnet_model.py  flat_baseline_builder.py  hierarchical_curriculum_builder.py  hierarchical_detection.py  hierarchical_loss.py  hierarchicalcoco.yaml  hierarchy_tensor_utils.py  misaligned_validator.py  mscoco_hierarchical_model.py  path_utils.py  predict.py  train.py  tree_utils.py  utils.py  viz_utils.py  worms_utils.py  yolo_fs_utils.py  yolo_utils.py
hierarchical_yolo/models/: coco_hierarchy.json
hierarchical_yolo/models/coco128/: hierarchicalcoco128.yaml  hierarchicalcoco128yolov8.yaml
notebooks/: hierarchical_mscoco128.ipynb  hierarchical_yolo.ipynb  hierarchical_yolo_deep7.ipynb  hierarchical_yolo_fathomnet.ipynb
tests/: test_doctests.py  test_path_utils.py  test_utils.py  utils.py
