[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "hierarchical_yolo"
version = "0.1.0"
description = "yolo, but with hierarchical output"
authors = [
    { name = "CScott Brown" },
]
dependencies = [
  "ultralytics",
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
]
