[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "hierarchical_yolo"
version = "0.2.51"
description = "yolo, but with hierarchical output"
authors = [
    { name = "CScott Brown" },
]
dependencies = [
  "ultralytics",
  "torch",
  "hierarchical_loss @ git+https://github.com/csbrown-noaa/hierarchical_loss.git",
  "pycocowriter",
  "yolo-kwcoco-serializer @ git+https://github.com/csbrown-noaa/yolo_kwcoco_serializer.git"
]
readme = "README.md"
classifiers = [
  "Programming Language :: Python :: 3",
]

[project.optional-dependencies]
dev = [
  "mkdocs",
  "mkdocs-material",
  "mkdocstrings[python]",
  "jupyter"
]
